v3 UI: fixes logo alignment.

--- a/tool-ui/src/main/webapp/style/v3/tool.less
+++ b/tool-ui/src/main/webapp/style/v3/tool.less
@@ -73,7 +73,7 @@
     img {
       bottom: 0;
       left: 0;
-      margin: auto;
+      margin: auto 0;
       max-height: 100%;
       max-width: 100%;
       position: absolute;
